Persons table, DateTable. Creating & Deleting persons

--- a/app/notec/src/components/layout/Header/styles.module.sass
+++ b/app/notec/src/components/layout/Header/styles.module.sass
@@ -1,6 +1,6 @@
-@import './_constants'
+@import '../../../assets/styles/_constants'
 
-.header
+.Header
     background-color: $grey-02
     padding: 20px
 
