--- a/app/notec/src/assets/styles/global.sass
+++ b/app/notec/src/assets/styles/global.sass
@@ -1,29 +1,24 @@
-@import './_constants'
-
 body
-    margin: 0
+  margin: 0
 
-main
-    min-height: calc(var(--vh, 1vh) * 100)
-    display: flex
-    flex-direction: column
+div#__next > div
+  margin: 0
+  min-height: calc(1vh * 100)
+  display: flex
+  align-items: stretch
+  flex-direction: column
 
-.page-container
-    display: flex
-    flex-direction: column
-    flex-grow: 1
+.main-container
+  display: flex
+  flex-grow: 1
 
-.content
-    flex-grow: 1
-    display: flex
-    flex-direction: column
-    align-items: center
-    background-color: $grey-01
+.AppContentWrapper
+  flex: 1
+  display: flex
 
-.page-container
-    flex-grow: 1
-    display: flex
-    flex-direction: column
-
-.footer
-    margin-top: auto
+.PageContentWrapper
+  flex: 1
+  overflow-y: auto
+  padding: 20px
+  width: 100%
+  display: flex
