--- a/app/notec/src/components/View/styles.module.sass
+++ b/app/notec/src/components/View/styles.module.sass
@@ -3,6 +3,6 @@
 .View
     max-width: 44em
 
-    &.fullWidth
-        width: 100%
-        max-width: unset
+.fullWidth
+    width: 100%
+    max-width: unset
