--- a/app/notec/src/forms/Appointments/Add/styles.module.sass
+++ b/app/notec/src/forms/Appointments/Add/styles.module.sass
@@ -19,6 +19,8 @@
         place-items: center
 
         svg
+            height: 40px,
+            width: 40px
             margin-right: 1rem
             path
                 fill: $primary
@@ -35,7 +37,9 @@
         font-size: 14px
         min-height: 40px
         padding: 1rem 2rem
-        margin: 1rem
+        margin: 1rem 3rem 1rem 1rem
+        background: white
+        box-sizing: initial
         &::placeholder
             font-size: 1rem
 
