--- a/app/notec/src/components/Breadcrumbs/styles.module.sass
+++ b/app/notec/src/components/Breadcrumbs/styles.module.sass
@@ -7,9 +7,18 @@
     text-transform: capitalize
     margin: 1rem 0
 
+    .Seperator
+        display: flex
+        height: 100%
+        align-items: center
+        margin: 0 .5rem
+
     .Breadcrumb
         display: flex
         align-items: center
+
+        .Active
+            color: $primary
 
     & a
         color: $black
