--- a/app/notec/src/components/HeaderActions/styles.module.sass
+++ b/app/notec/src/components/HeaderActions/styles.module.sass
@@ -2,6 +2,8 @@
 
 .HeaderActions
     display: flex
+    align-items: center
+    margin-bottom: 1rem
 
     .Title
         font-size: 2em
@@ -14,6 +16,8 @@
         font-size: 1rem
         font-weight: bold
         border: 1px solid $primary
+        max-height: 40px
+        margin-left: 1rem
 
         &:hover
             background: white
