User auth with firebase + auth provider with loader

--- a/app/notec/src/components/View/styles.module.sass
+++ b/app/notec/src/components/View/styles.module.sass
@@ -3,6 +3,15 @@
 .View
     max-width: 44em
 
-.fullWidth
+.FullWidth
     width: 100%
     max-width: unset
+
+.FullScreen
+    max-width: unset
+    width: 100%
+    flex-grow: 1
+    display: flex
+    justify-content: center
+    align-content: center
+    align-items: center
