login and register via firebase

--- a/app/notec/src/assets/styles/global.sass
+++ b/app/notec/src/assets/styles/global.sass
@@ -105,3 +105,7 @@ div#__next > div
   & .MuiFormControl-root
     margin-bottom: 1rem
     width: 100%
+
+.ToastPrimary
+  font-family: 'Nunito Sans'
+  font-weight: bold
