--- a/app/notec/src/components/Button/styles.module.sass
+++ b/app/notec/src/components/Button/styles.module.sass
@@ -1,20 +1,20 @@
 @import ../../assets/styles/_constants
 
 .Button
-    font-size: 1rem
-    padding: .2rem 1rem
-    font-weight: bold
-    background-color: $primary
-    color: $white
-    border: 1px solid $primary
+    font-size: 1rem!important
+    padding: .2rem 1rem!important
+    font-weight: bold!important
+    background-color: $primary!important
+    color: $white!important
+    border: 1px solid $primary!important
     &:hover
-        background-color: $white
-        color: $primary
-        border: 1px solid $white
+        background-color: $white!important
+        color: $primary!important
+        border: 1px solid $primary!important
     &.secondary
-        background-color: $white
-        color: $primary
-        border: 1px solid $white
+        background-color: $white!important
+        color: $primary!important
+        border: 1px solid $white!important
         &:hover
-            background-color: $primary
-            color: $white
+            background-color: $primary!important
+            color: $white!important
