Token refresh and layout optimization

--- a/app/notec/src/components/DataTable/styles.module.sass
+++ b/app/notec/src/components/DataTable/styles.module.sass
@@ -3,5 +3,9 @@
 .Table
     width: 100%
 
+    & .TableHeadCell
+        font-size: 1.2rem
+        font-weight: bold
+
     & .RowActionButton
         cursor: pointer
