--- a/app/notec/src/assets/styles/global.sass
+++ b/app/notec/src/assets/styles/global.sass
@@ -36,7 +36,7 @@ div#__next > div
 .PageContentWrapper
   flex: 1
   overflow-y: auto
-  padding: 20px
+  padding: 2rem 4rem
   width: 100%
   display: flex
   flex-direction: column
