--- a/app/notec/src/components/Breadcrumbs/styles.module.sass
+++ b/app/notec/src/components/Breadcrumbs/styles.module.sass
@@ -2,8 +2,8 @@
 
 .Breadcrumbs
     display: flex
-    font-size: 2rem
-    font-weight: bold
+    font-size: 1.5rem
+    font-weight: normal
     text-transform: capitalize
     margin: 1rem 0
 
