--- a/app/notec/src/forms/Services/Add/styles.module.sass
+++ b/app/notec/src/forms/Services/Add/styles.module.sass
@@ -3,10 +3,6 @@
 .FormContainer
     width: 100%
     margin: 0 auto
-    padding: 20px
-    background-color: #f4f4f4
-    border-radius: 5px
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1)
     color: #333
 
     h2
@@ -16,6 +12,7 @@
     .FormGroup
         margin-bottom: 20px
         display: flex
+        place-content: center
         place-items: center
 
         svg
@@ -27,18 +24,6 @@
         display: block
         margin-bottom: 5px
         font-weight: bold
-
-    .FormInput
-        background: $white
-        width: 100%
-        border: 1px solid #ccc
-        border-radius: 3px
-        font-size: 14px
-        min-height: 40px
-        padding: 1rem 2rem
-        margin: 1rem
-        &::placeholder
-            font-size: 1rem
 
     .FormButton
         background-color: #007bff
