--- a/app/notec/src/components/layout/SideMenu/styles.module.sass
+++ b/app/notec/src/components/layout/SideMenu/styles.module.sass
@@ -1,35 +1,5 @@
 @import ../../../assets/styles/_constants
 
 .SideMenuWrapper
-    background: $grey-01
-    padding: .5rem
-
-    .DrawerPrimary
-        & div
-            background: $grey-01
-            border: 1px solid $grey-01
-
-    .NavMenuWrapper
-        padding: 1rem
-
-        .NavMenuButton
-            display: flex
-            width: 100%
-            justify-content: flex-start
-            transition: none
-
-            &:hover
-                background: $primary
-                border: 1px solid $primary
-
-                .NavMenuText, svg
-                    color: $white
-                    background: $primary
-                    border: 0
-
-            .NavMenuText
-                font-weight: bold
-                font-size: 1rem
-
-            svg
-                margin-right: 1rem
+    background: $bg-primary
+    padding-top: 1rem
