--- a/app/notec/src/assets/styles/_constants.sass
+++ b/app/notec/src/assets/styles/_constants.sass
@@ -1,7 +1,18 @@
 $primary: #1976d2
+$bg-primary: #3b3941
+$bg-primary-hover: #5a5a5e
+$bg-secondary: #282532
 $secondary: #4a9aeb
 $hover-light: #f6fbff
 $grey-01: #f5f5f5
 $grey-02: #ebebeb
 $white: #ffff
 $black: #000
+
+
+
+// TEMNA
+//FBFAFB 8790A0 96A2B5 747883 282532
+
+
+// F5F4F3 797B7C 918D9E 745E76 1F1E22
