--- a/app/notec/src/components/layout/Header/styles.module.sass
+++ b/app/notec/src/components/layout/Header/styles.module.sass
@@ -1,10 +1,12 @@
 @import ../../../assets/styles/_constants
 
-.HeaderDesktop
-    display: flex
-    align-items: center
-    justify-content: flex-end
-    font-size: 1.2rem
-    padding: 1.5rem 3rem
-    svg
-        fill: white
+.AppBarWrapper
+    background-color: $bg-secondary!important
+    .HeaderDesktop
+        display: flex
+        align-items: center
+        justify-content: flex-end
+        font-size: 1.2rem
+        padding: 1.5rem 3rem
+        svg
+            fill: white
