--- a/app/notec/src/forms/Appointments/Add/styles.module.sass
+++ b/app/notec/src/forms/Appointments/Add/styles.module.sass
@@ -3,13 +3,7 @@
 .FormContainer
     width: 100%
     margin: 0 auto
-    background-color: #f4f4f4
-    border-radius: 5px
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1)
     color: #333
-
-    .Form
-        padding: 2.5rem
 
     h2
         text-align: center
@@ -18,11 +12,11 @@
     .FormGroup
         margin-bottom: 20px
         display: flex
+        place-content: center
         place-items: center
+        width: 100%
 
         svg
-            height: 40px,
-            width: 40px
             margin-right: 1rem
             path
                 fill: $primary
@@ -31,39 +25,6 @@
         display: block
         margin-bottom: 5px
         font-weight: bold
-
-    .FormInput
-        width: 100%
-        cursor: pointer
-        border: 1px solid #ccc
-        border-radius: 3px
-        font-size: 14px
-        min-height: 40px
-        padding: 1rem 2rem
-        background: white
-        box-sizing: initial
-
-        &::placeholder
-            font-size: 1rem
-
-        &:not(:last-child)
-            margin: 1rem 3rem 1rem 1rem
-
-        & > div
-            width: 100%
-
-        & input[type="text"]
-            min-height: 40px
-            width: 100%
-            border: none
-            padding: initial
-            cursor: inherit
-            font-size: 1.2rem
-            font-family: inherit
-
-            &:focus-visible
-                outline: 0
-                padding: 0
 
     .FormButton
         background-color: #007bff
@@ -81,6 +42,7 @@
             text-transform: uppercase
             font-weight: normal
             width: 100%
+            margin: 1rem
 
     .FormMessage
         padding: 10px
