--- a/app/notec/src/components/Breadcrumbs/styles.module.sass
+++ b/app/notec/src/components/Breadcrumbs/styles.module.sass
@@ -1,5 +1,12 @@
 @import ../../assets/styles/_constants
 
+.HomeIconWrapper
+    margin-right: 1rem
+    a
+        display: flex
+        svg
+            font-size: 2rem
+
 .Breadcrumbs
     display: flex
     font-size: 1.5rem
