--- a/app/notec/src/components/DataTable/styles.module.sass
+++ b/app/notec/src/components/DataTable/styles.module.sass
@@ -9,3 +9,8 @@
 
     & .RowActionButton
         cursor: pointer
+
+@media screen and (max-width: 768px)
+    .TableHeadCell
+        font-size: 1rem!important
+        padding: .5rem!important
