Edit/delete persons and services. QOL improvements, useRequestStore

--- a/app/notec/src/assets/styles/global.sass
+++ b/app/notec/src/assets/styles/global.sass
@@ -158,8 +158,10 @@ div#__next > div
   & .fc-toolbar
     flex-direction: column
 
-.fc-daygrid-event-harness:nth-child(2n) > .fc-event
-  background: $secondary
+.fc-timegrid-col-events div a
+  background: #3EAC2a
+.fc-timegrid-col-events div:nth-child(2) a
+  background: #63db4e
 
 .react-datepicker
   font-family: 'Nunito Sans'!important
