--- a/app/notec/src/pages/appointments/styles.module.sass
+++ b/app/notec/src/pages/appointments/styles.module.sass
@@ -13,9 +13,13 @@
         margin-bottom: 2rem
 
     .EventCell
-        background: $primary
         padding: .5rem
         color: white
         font-size: 1.2rem
-        position: relative
         margin: .2rem
+        display: flex
+        border: 0
+
+    .SlotLabelDay
+        font-size: 1.2rem
+        font-weight: 500
