Edit / Delete appointments

--- a/app/notec/src/assets/styles/global.sass
+++ b/app/notec/src/assets/styles/global.sass
@@ -158,6 +158,9 @@ div#__next > div
   & .fc-toolbar
     flex-direction: column
 
+  & .fc-event
+    position: relative
+
 .fc-timegrid-col-events div a
   background: #3EAC2a
 .fc-timegrid-col-events div:nth-child(2) a
@@ -192,3 +195,12 @@ div#__next > div
 .ToastPrimary
   font-family: 'Nunito Sans'
   font-weight: bold
+
+.AsyncPrimary
+  font-size: 1rem
+  & > div
+    padding: 0.8rem 0.2rem
+
+  & .MultiValueGeneric
+    padding: 10px
+    font-size: 100%
