Appointments async select and filtering

--- a/app/notec/src/forms/Appointments/Add/styles.module.sass
+++ b/app/notec/src/forms/Appointments/Add/styles.module.sass
@@ -4,6 +4,7 @@
     width: 100%
     margin: 0 auto
     color: #333
+    max-width: 44rem
 
     h2
         text-align: center
@@ -42,7 +43,7 @@
             text-transform: uppercase
             font-weight: normal
             width: 100%
-            margin: 1rem
+            margin: 1rem 0
 
     .FormMessage
         padding: 10px
