Filtering table functionality

--- a/app/notec/src/assets/styles/global.sass
+++ b/app/notec/src/assets/styles/global.sass
@@ -149,7 +149,7 @@ div#__next > div
   width: 70px!important
 
 .MuiInputBase-input
-  display: flex
+  display: flex!important
   align-items: center
   font-size: 1.2rem
   font-weight: 500
