--- a/app/notec/src/components/DataTable/styles.module.sass
+++ b/app/notec/src/components/DataTable/styles.module.sass
@@ -6,9 +6,18 @@
     & .TableHeadCell
         font-size: 1.2rem
         font-weight: bold
+        padding: 10px
+
+    & .TableBodyCell
+        padding: 10px
 
     & .RowActionButton
         cursor: pointer
+
+    & .FooterPagination
+
+    & .ActionsComponent
+        display: flex
 
 @media screen and (max-width: 768px)
     .TableHeadCell
