Breadcrumbs home icon, profile page with profile update and password reset.

--- a/app/notec/src/components/Breadcrumbs/styles.module.sass
+++ b/app/notec/src/components/Breadcrumbs/styles.module.sass
@@ -9,8 +9,8 @@
 
 .Breadcrumbs
     display: flex
-    font-size: 1.5rem
-    font-weight: normal
+    font-size: 1rem
+    font-weight: 500
     text-transform: capitalize
     margin: 1rem 0
 
@@ -18,7 +18,9 @@
         display: flex
         height: 100%
         align-items: center
-        margin: 0 .5rem
+        margin: 0 .7rem
+        & svg
+            font-size: 1.5rem
 
     .Breadcrumb
         display: flex
