--- a/app/notec/src/components/PaperCard/styles.module.sass
+++ b/app/notec/src/components/PaperCard/styles.module.sass
@@ -1,8 +1,7 @@
 @import ../../assets/styles/_constants.sass
 
 .PaperCard
-    margin-bottom: 1rem
-
+    flex-grow: 1!important
     &.Clickable
         cursor: pointer
         transition: all .2s ease
