appoitments optimization with generic modal

--- a/app/notec/src/assets/styles/global.sass
+++ b/app/notec/src/assets/styles/global.sass
@@ -163,8 +163,11 @@ div#__next > div
 
 .fc-timegrid-col-events div a
   background: #3EAC2a
-.fc-timegrid-col-events div:nth-child(2) a
+.fc-timegrid-col-events div:nth-child(2n) a
   background: #63db4e
+.fc-timegrid-col-events div:nth-child(3n) a
+  background: #76b86a
+
 
 .react-datepicker
   font-family: 'Nunito Sans'!important
