--- a/app/notec/src/pages/appointments/styles.module.sass
+++ b/app/notec/src/pages/appointments/styles.module.sass
@@ -26,5 +26,8 @@
         font-size: 1.2rem
         font-weight: 500
 
-    .SlotServiceItem
+    .SlotLabelWeek
         font-size: .8rem
+
+    .SlotServiceItem
+        font-size: 1rem
