--- a/app/notec/src/components/MenuNav/styles.module.sass
+++ b/app/notec/src/components/MenuNav/styles.module.sass
@@ -38,7 +38,6 @@
         padding: 1.5rem
 
     .NavMenuWrapper
-        padding-top: 1rem
 
         .NavMenuButtonWrapper
             width: 100%
@@ -68,3 +67,8 @@
 
                 svg
                     margin-right: 1rem
+
+    .ProfileMenuButton
+        width: 100%
+        display: flex
+        justify-content: center
