--- a/app/notec/src/pages/appointments/styles.module.sass
+++ b/app/notec/src/pages/appointments/styles.module.sass
@@ -23,7 +23,7 @@
         cursor: pointer
 
     .SlotLabelDay
-        font-size: 1.2rem
+        font-size: .8rem
         font-weight: 500
 
     .SlotLabelWeek
@@ -31,3 +31,15 @@
 
     .SlotServiceItem
         font-size: 1rem
+
+    .DateNavCn
+        margin: 3rem 0
+
+        .DateNavArrow
+            background: transparent
+            border: 0
+            color: $primary
+            margin: 0
+
+        svg
+            font-size: 4rem
