Navigation sidebar redesign

--- a/app/notec/src/assets/styles/_constants.sass
+++ b/app/notec/src/assets/styles/_constants.sass
@@ -1,5 +1,5 @@
 $primary: #1976d2
-$bg-primary: #3b3941
+$bg-primary: #252429
 $bg-primary-hover: #5a5a5e
 $bg-secondary: #282532
 $secondary: #4a9aeb
