--- a/app/notec/src/components/layout/Header/styles.module.sass
+++ b/app/notec/src/components/layout/Header/styles.module.sass
@@ -1,11 +1,10 @@
 @import ../../../assets/styles/_constants
 
 .AppBarWrapper
-    background-color: $bg-secondary!important
     .HeaderDesktop
         display: flex
         align-items: center
-        justify-content: flex-end
+        justify-content: center
         font-size: 1.2rem
         padding: 1.5rem 3rem
         svg
