--- a/app/notec/src/components/HeaderActions/styles.module.sass
+++ b/app/notec/src/components/HeaderActions/styles.module.sass
@@ -2,6 +2,9 @@
 
 .HeaderActions
     margin-bottom: 1rem
+    display: flex
+    align-items: center
+    justify-content: space-between
 
     .Title
         font-size: 2em
