--- a/app/notec/src/components/View/styles.module.sass
+++ b/app/notec/src/components/View/styles.module.sass
@@ -15,3 +15,9 @@
     justify-content: center
     align-content: center
     align-items: center
+
+.DirectionRow
+    flex-direction: row
+
+.DirectionColumn
+    flex-direction: column
