--- a/app/notec/src/assets/styles/_constants.sass
+++ b/app/notec/src/assets/styles/_constants.sass
@@ -7,8 +7,17 @@ $tertiary: #96A2B5
 $hover-light: #f6fbff
 $grey-01: #f5f5f5
 $grey-02: #ebebeb
+$grey-03: #858585
+$border-grey: #dbdbdb
 $white: #ffff
 $black: #000
+$box-hover: 0px 0px 15px rgba(0, 0, 0, 0.123)
+
+$event-bg: #e778c6
+
+$bg-today: #f1f1f1
+
+$calendar-today-border-radius: 35px
 
 // TEMNA
 //FBFAFB 8790A0 96A2B5 747883 282532
