Redesign for dashboard and client overview

--- a/app/notec/src/assets/styles/_constants.sass
+++ b/app/notec/src/assets/styles/_constants.sass
@@ -19,6 +19,8 @@ $bg-today: #f1f1f1
 
 $calendar-today-border-radius: 35px
 
+$fontFamilyPrimary: 'Inter'
+
 // TEMNA
 //FBFAFB 8790A0 96A2B5 747883 282532
 
