--- a/app/notec/src/components/DataTable/styles.module.sass
+++ b/app/notec/src/components/DataTable/styles.module.sass
@@ -5,11 +5,13 @@
 
     & .TableHeadCell
         font-size: 1.2rem
-        font-weight: bold
+        font-weight: light
         padding: 10px
+        color: $grey-03
 
     & .TableBodyCell
         padding: 10px
+        font-size: 1.2rem
 
     & .RowActionButton
         cursor: pointer
