--- a/app/notec/src/pages/appointments/styles.module.sass
+++ b/app/notec/src/pages/appointments/styles.module.sass
@@ -78,7 +78,7 @@
 
     .SwitcherButton
         font-weight: bold
-        font-family: 'Nunito Sans'
+        font-family: $fontFamilyPrimary
         font-size: 1rem
         padding: .5rem 1.5rem
         border-radius: 35px 35px 35px 35px!important
