--- a/app/notec/src/assets/styles/global.sass
+++ b/app/notec/src/assets/styles/global.sass
@@ -15,6 +15,9 @@
   .PageContentWrapper
     padding: 1rem!important
 
+.fc-scrollgrid-section-header .fc-scroller
+  overflow: hidden!important
+
   .fc
     & .fc-toolbar-chunk
       width: 100%
@@ -77,6 +80,9 @@
 
   .MuiTableCell-root
     padding: .2rem
+
+  .MuiSelect-select.MuiTablePagination-select.MuiSelect-standard.MuiInputBase-input
+    display: flex!important
 
 // End of mobile
 
