--- a/app/notec/src/components/DateNav/styles.module.sass
+++ b/app/notec/src/components/DateNav/styles.module.sass
@@ -34,8 +34,7 @@
     .DateNavArrow
         background: transparent
         border: 0
-        color: $primary
-        margin: 0
+        color: $black
 
         svg
-            font-size: 4rem
+            font-size: 2rem
