--- a/app/notec/src/components/PaperCard/styles.module.sass
+++ b/app/notec/src/components/PaperCard/styles.module.sass
@@ -20,3 +20,7 @@
         color: $grey-03
         font-weight: 400
         font-size: 1.2rem
+
+    .PaperCardIcon
+        svg
+            font-size: 3rem
